--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Hola Mundo</title>
     </head>
     <body>
-        <p>Hola estudiantes, sigueme en las redes</p>
+        <p>Hola amigos, sigueme en las redes</p>
     </body>
 </html>
